tests/specs/ecosystem/julli4n/parse_roblox_errors/1_1_9.test
julli4n/parse-roblox-errors/1.1.9
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/versions/BEDEV2.ts:225:17
    | 
225 | export function parseBEDEV2ErrorFromString(text: string, contentType: string) {
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/versions/BEDEV2.ts:234:17
    | 
234 | export function parseBEDEV2Error(response: Response) {
    |                 ^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/versions/BEDEV2.ts:243:17
    | 
243 | export function parseBEDEV2ErrorFromStringAndHeaders(
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/versions/BEDEV1.ts:37:17
   | 
37 | export function parseBEDEV1ErrorFromString(text: string, contentType: string) {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/versions/BEDEV1.ts:46:17
   | 
46 | export function parseBEDEV1Error(response: Response) {
   |                 ^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/versions/BEDEV1.ts:54:17
   | 
54 | export function parseBEDEV1ErrorFromStringAndHeaders(
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


